--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body>
     <header class="parte-arriba">
         <div class="banner-arriba" >
+            <img src="https://github.com/hugo03sm/hugo03sm.github.io/blob/main/Captura_de_pantalla_2024-02-09_083834-removebg-preview.png" alt="Logo ISOGO!">
             <h1>Proyecto aplicación polvos</h1>
             <H2>Por Hugo Suárez</H2> 
         </div>
