--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
     <header class="parte-arriba">
         <div class="banner-arriba" >
-            <img="Captura_de_pantalla_2024-02-09_083834-removebg-preview.png" alt="Logo ISOGO!" style="height: 13vh; width:13%;" >
+            <img="https://github.com/hugo03sm/hugo03sm.github.io/blob/18c58c916cab74994c9d67791e34af31488e7e1c/Captura_de_pantalla_2024-02-09_083834-removebg-preview.png" alt="Logo ISOGO!" style="height: 13vh; width:13%;" >
             <h1>Calculadora de nutrición durante el ejercicio</h1>
             <H2>Por Hugo Suárez</H2> 
             <br>
