--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <header class="banner-arriba" >
-            <img src="C:\Users\hugo0\Downloads\Captura_de_pantalla_2024-02-09_083834-removebg-preview.png" alt="Logo ISOGO!" style="height: 13vh; width:13%;" >
+            <img src="Captura_de_pantalla_2024-02-09_083834-removebg-preview.png" alt="Logo ISOGO!" style="height: 13vh; width:13%;" >
             <h1>Calculadora de nutrición durante el ejercicio</h1> 
             <br>
             <H2></H2> 
